--- a/sass/site/layout/_layout-skin-1.scss
+++ b/sass/site/layout/_layout-skin-1.scss
@@ -72,15 +72,6 @@ body{
 			margin-bottom: 20px;
 			border-bottom: 0;
 		}
-		@media (max-width: $mx-col-sm) {
-			#primary,
-			#secondary {
-				padding-top: 0;
-			}
-			.ast-container {
-				padding-top: 10px;
-			}
-		}
 	}
 	.blog-layout-1{
         padding: 0;
@@ -127,10 +118,14 @@ body{
 	@media (max-width: $mx-col-sm) {
 		.ast-article-post,
 		.ast-article-single{
-		    padding: 1.5em 2em;
+		    padding: 2em;
 		}
+		#primary,
 		#secondary{
 			padding-top: 0;
+		}
+		.ast-container {
+			padding-top: 10px;
 		}
 	}
 }
@@ -194,6 +189,12 @@ body{
 	@media (max-width: $mx-col-md) {
 		#secondary {
 			margin-top: 1.5em;
+		}
+	}
+	
+	@media (max-width: $mx-col-sm) {
+		.site-content #primary{
+			margin: 0;
 		}
 	}
 
@@ -295,7 +296,7 @@ body{
 	// Right Sidebar - Spacing Between Primary & Secondary
 	.ast-right-sidebar {
 		#primary {
-			padding-right: 0;
+			padding: 0;
 		}
 		#secondary {
 			padding-left: 0;
